--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "./style.css";
+
 *,
 *::after,
 *::before {
@@ -55,7 +57,7 @@ body {
   font-family: "Poppins", sans-serif;
   width: 100%;
   background: var(--grey-50);
-  color: var(--grey-800)
+  color: var(--grey-800);
 }
 
 ul,
